# Video_storage_task

./: Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  task.md
alimbic/: env.py
src/app/: .env  config.py  main.py  startup.py
src/app/api/: health.py  home.py  init.py  startup.py  web.py
src/app/api/auth/: dependencies.py  router.py  service.py  views.py
src/app/api/home/: router.py  views.py
src/app/api/user/: router.py  service.py  views.py
src/app/core/handlers/: errors.py  handlers.py
src/app/core/modules/: security.py
src/app/core/modules/auth/: jwt_handler.py
src/app/core/modules/minio/: minio_client.py
src/app/core/modules/security/: dependencies.py
src/app/core/schemas/: base.py  schemas.py  token.py  user.py  video.py
src/app/infrastructure/alembic/: alembic.ini  env.py
src/app/infrastructure/alembic/versions/: 17649f80d0f1_initial_migration.py  5ea9ac321a8d_add_user_table2.py  d9c916d22720.py
src/app/infrastructure/database/: config_loader.py  database.py  postgres.py
src/app/infrastructure/database/models/: __init__.py  base.py  postgres.py  user_model.py  video_model.py
src/app/infrastructure/minio/: minio_client.py
src/app/security/: auth.py
src/app/templates/templates/: health.html  home.html
